--- a/.github/ISSUE_TEMPLATE/dog.yaml
+++ b/.github/ISSUE_TEMPLATE/dog.yaml
@@ -26,3 +26,11 @@ body:
         - Dasher
         - Connie
       default: 0
+  - type: dropdown
+    id: cat
+    attributes:
+      label: Which cat makes the best coding buddy?
+      options:
+        - Poseidon
+        - Snickers
+        - Ted
