--- a/.github/ISSUE_TEMPLATE/labels-test.yml
+++ b/.github/ISSUE_TEMPLATE/labels-test.yml
@@ -13,3 +13,12 @@ body:
       label: Contact Details
       description: How can we get in touch with you if we need more info?
       placeholder: ex. email@example.com
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
+    validations:
+      required: true
